# api.yaml
@@ -95,6 +95,56 @@ paths:
         500: 
           description: Server error
 
+  /api/student/forgotPassword:
+    post:
+      summary: Student forgot password request
+      description: Student forgot password request
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            required:
+              - email
+            properties:
+              email:
+                type: string
+      responses:
+        200: 
+          description: Email sent
+        400:
+          description: User error
+        500: 
+          description: Server error
+
+  /api/student/resetPassword/:resetToken:
+    post:
+      summary: Student reset password request
+      description: Student reset password request
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            required:
+              - password
+              - confirmPassword
+              - resetToken (params)
+            properties:
+              password:
+                type: string
+              confirmPassword:
+                type: string
+      responses:
+        200: 
+          description: Password Reset successful
+        400:
+          description: User error
+        500: 
+          description: Server error
+
   /api/instructor/register:
     post:
       summary: Register new instructor
